<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/current_song"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    app:layout_constraintBottom_toBottomOf="parent">

    <android.support.constraint.Guideline
        android:id="@+id/guidelineL48"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.48" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineR48"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.52" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineL8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.08" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineR8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.92" />

    <View
        android:id="@+id/curr_playing_separator"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#000000" />

    <TextView
        android:id="@+id/curr_playing"
        android:layout_height="55dp"
        android:layout_width="0dp"
        android:textSize="16sp"
        android:text="@string/curr_playing"
        android:paddingHorizontal="1dp"
        android:textColor="#000000"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/curr_playing_separator"
        app:layout_constraintLeft_toRightOf="@id/pause_play"
        app:layout_constraintRight_toLeftOf="@id/skip"/>

    <TextView
        android:id="@+id/curr_playing_center"
        android:layout_height="35dp"
        android:layout_width="0dp"
        android:gravity="center"
        android:textSize="20sp"
        android:text="|"
        android:textColor="#000000"
        app:layout_constraintLeft_toLeftOf="@id/guidelineL48"
        app:layout_constraintRight_toRightOf="@id/guidelineR48"
        app:layout_constraintTop_toBottomOf="@id/curr_playing"/>

    <TextView
        android:id="@+id/curr_playing_name"
        android:layout_height="35dp"
        android:layout_width="0dp"
        android:gravity="center"
        android:text="---"
        android:textColor="#000000"
        app:layout_constraintRight_toRightOf="@id/guidelineL48"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/curr_playing"/>

    <TextView
        android:id="@+id/curr_playing_artist"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:gravity="center"
        android:text="---"
        android:textColor="#000000"
        app:layout_constraintLeft_toLeftOf="@id/guidelineR48"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/curr_playing" />

    <ImageView
        android:id="@+id/pause_play"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@null"
        android:src="@drawable/ic_play_arrow_black_24dp"
        app:layout_constraintLeft_toLeftOf="@id/guidelineL8"
        app:layout_constraintTop_toTopOf="@+id/curr_playing"
        app:layout_constraintBottom_toBottomOf="@+id/curr_playing"/>

    <ImageView
        android:id="@+id/skip"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@null"
        android:src="@drawable/ic_skip_next_black_24dp"
        app:layout_constraintRight_toRightOf="@id/guidelineR8"
        app:layout_constraintTop_toTopOf="@+id/curr_playing"
        app:layout_constraintBottom_toBottomOf="@+id/curr_playing"/>



</android.support.constraint.ConstraintLayout>