<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/song_entry"
    android:descendantFocusability="blocksDescendants"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/entry_margin">

    <TextView
        android:id="@+id/song_name"
        android:singleLine="true"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit ="marquee_forever"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="bottom"
        android:scrollHorizontally="true"
        android:layout_marginTop="@dimen/entry_margin"
        android:layout_height="30dp"
        android:layout_width="0dp"
        android:layout_alignParentStart="true"
        android:padding="@dimen/entry_margin"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/like_button"/>

    <TextView
        android:id="@+id/song_attrs"
        android:singleLine="true"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit ="marquee_forever"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:scrollHorizontally="true"
        android:layout_height="20dp"
        android:layout_width="0dp"
        android:layout_alignParentStart="true"
        android:gravity="bottom"
        android:paddingHorizontal="@dimen/entry_margin"
        android:paddingBottom="@dimen/entry_margin"
        android:textColor="#555555"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/like_button"
        app:layout_constraintTop_toBottomOf="@id/song_name"/>

    <ImageButton
        android:id="@+id/dislike_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:padding="@dimen/entry_margin"
        android:layout_marginEnd="10dp"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageButton
        android:id="@+id/like_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_marginEnd="10dp"
        app:layout_constraintRight_toLeftOf="@id/dislike_button" />

</android.support.constraint.ConstraintLayout>